
      - The commandline option 'dis.resolvedata' has been renamed to
        'dis.resolve', with new usage (see manual for further details).

  * Fixed regression in handling ZIP files (as compared to version 3.7.5)
    created with newer versions of the ZIP program.  Related to this, added
    better error messages for invalid/missing/unreadable ROM files.

  * Fixed bug in Linux/OSX versions when starting Stella for the first
    time; it was previously creating mislabeled directories to store
    settings, snapshots, etc.

  * Fixed redundant "New console created" message when entering the same
    ROM multiple times from the ROM launcher.

  * Updated profile database for "BasketBall" ROMs; the joysticks are now
    swapped by default, which allows one and two-player games to work
    correctly.

  * SuperCharger/AR ROMs now ignore the 'ramrandom' setting, and start with
    RAM containing all zeroes.  This seems to fix issues with Dragonstomper
    always starting in exactly the same state.

  * Changed colour of the 'current PC indicator' in the debugger to
    match the one used for line selection.  This makes it easier to
    see for those with problems seeing lighter colours.

  * Improved functionality of the various pop-up dialogs and context
    menus in the UI; they can now be navigated more fully by the keyboard
    and mouse.

  * Updated internal ROM properties database to ROM-Hunter version 9
    (thanks go to RomHunter for his tireless research in this area).
    Related to this, updated the snapshot collection.

  * Updated included PNG and ZLIB libraries to latest stable version.

-Have fun!


3.8 to 3.8.1: (March 3, 2013)

  * Added support for TIA RSYNC writes, thanks to Omegamatrix of AtariAge.
    This allows the recently released "Extra Terrestrials" ROM to run, as
    well as improving emulation of "Fatal Run" and several other test ROMs.

  * Fixed typo in TIA HMOVE writes, thanks to Thomas Jentzsch.  This fixes